tests/ui/traits/const-traits/super-traits-fail-3.yyn.stderr
error: `[const]` is not allowed here
  --> $DIR/super-traits-fail-3.rs:23:12
   |
LL | trait Bar: [const] Foo {}
   |            ^^^^^^^
   |
note: this trait is not a `#[const_trait]`, so it cannot have `[const]` trait bounds
  --> $DIR/super-traits-fail-3.rs:23:1
   |
LL | trait Bar: [const] Foo {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: `[const]` can only be applied to `#[const_trait]` traits
  --> $DIR/super-traits-fail-3.rs:32:17
   |
LL | const fn foo<T: [const] Bar>(x: &T) {
   |                 ^^^^^^^ can't be applied to `Bar`
   |
help: mark `Bar` as `#[const_trait]` to allow it to have `const` implementations
   |
LL | #[const_trait] trait Bar: [const] Foo {}
   | ++++++++++++++

error: `[const]` can only be applied to `#[const_trait]` traits
  --> $DIR/super-traits-fail-3.rs:32:17
   |
LL | const fn foo<T: [const] Bar>(x: &T) {
   |                 ^^^^^^^ can't be applied to `Bar`
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: mark `Bar` as `#[const_trait]` to allow it to have `const` implementations
   |
LL | #[const_trait] trait Bar: [const] Foo {}
   | ++++++++++++++

error[E0277]: the trait bound `T: [const] Foo` is not satisfied
  --> $DIR/super-traits-fail-3.rs:36:7
   |
LL |     x.a();
   |       ^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
